<resources>
    <string name="app_name">Pin Point</string>
    <string name="action_logout">Log out</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_slider_home">Menu</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="login_account">Account</string>
    <string name="login_user">User</string>
    <string name="login_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="enter_abv_data_first">Enter above data first.</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="authenticating">Authenticating</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="error">Error ! Try again Later</string>
    <string name="error_textfield">Error ! Check all filled data.</string>
    <string name="fetch_dev_list">Fetching Device List Data</string>
    <string name="dev_list_not_found">Device list not found.</string>
    <string name="fetch_map_details">Fetching Fleet data.</string>
    <string name="no_data_found">No data found.</string>
    <string name="ploting_points">Ploting Points</string>
    <string name="sending_data">Sending Data</string>
    <string name="tap_to_change_date">Tap To Change Date</string>
    <string name="enter_date_first">Enter From and To Dates.</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="save">Save</string>
    <string name="permission_denied_for_edit">You don\'t have permission to edit information.</string>
    <string name="permission_denied_for_delete">You don\'t have permission to delete information.</string>
    <string name="permission_denied_for_add">You don\'t have permission to add information.</string>
    <string name="permission_denied_for_edit_delete">You don\'t have permission to edit OR delete information.</string>
    <string name="data_geathering">Data Gethering</string>
    <string name="updating">Updating</string>
    <string name="deleting">Deleting</string>
    <string name="adding">Creating</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="vehicle_is_already_exist">This vehicle is already exist.</string>
    <string name="user_is_already_exist">This user is already exist.</string>
    <string name="group_is_already_exist">This group ID is already exist.</string>
    <string name="password_did_not_match">The passwords you entered did not match.</string>
    <string name="changing_password">Changing Password</string>
    <string name="adding_new_group">Adding New Group</string>
    <string name="create">Create</string>
    <string name="enter_group_id">Enter Group Name:</string>
    <string name="edit_col">Edit:</string>
    <string name="edit">Edit</string>
    <string name="enter_group_desc">Enter Group Description :</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_group">Delete Group</string>
    <string name="delete_msg">Are you sure you want to delete </string>
    <string name="group_que"> group?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_user_name">Enter New Username :</string>
    <string name="vehicle_map">Vehicle Map:</string>
    <string name="select_date_range">Select Date Range:</string>
    <string name="from">From: </string>
    <string name="time_zone">Time Zone: </string>
    <string name="chk_set_speed_for_all_device">Set Speed For All Device</string>
    <string name="user_id">User ID:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="cnt_name">Contact Name:</string>
    <string name="cnt_phone">Contact Phone:</string>
    <string name="email_id">Email ID:</string>
    <string name="notify_email">Notify Email:</string>
    <string name="is_active">Is Active:</string>
    <string name="vehicle_id">Vehicle ID:</string>
    <string name="device_id">Device ID:</string>
    <string name="dev_desc">Device Description:</string>
    <string name="unique_id">Unique ID:</string>
    <string name="equipment_type">Equipment Type:</string>
    <string name="sim_phn_no">SIM Phone No:</string>
    <string name="imei_number">IMEI Number:</string>
    <string name="fuel_capacity">Fuel Capacity:</string>
    <string name="serial_number">Serial Number:</string>
    <string name="engine_hour_offset">Engine Hour Offset:</string>
    <string name="odomenter_offset_km">Odometer Offset KM:</string>
    <string name="licence_plate">Licence Plate:</string>
    <string name="creation_date">Creation Date:</string>
    <string name="send_email">Send Email:</string>
    <string name="driver_id">Driver ID:</string>
    <string name="short_name">Short Name:</string>
    <string name="account_id">Account ID:</string>
    <string name="account_desc">Account Description:</string>
    <string name="speed_unit">Speed Unit:</string>
    <string name="distance_unit">Distance Unit:</string>
    <string name="lat_lng_format">Latitude - Longitude Format:</string>
    <string name="default_login_user_id">Default Login User ID:</string>
    <string name="old_pass">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>
    <string name="gps">GPS: </string>
    <string name="speed">Speed: </string>
    <string name="address">Address: </string>
    <string name="enter_dev_id">Enter Device ID:</string>
    <string name="get_report">Get Report</string>
    <string name="group_id">Group ID:</string>
    <string name="driver_per_set_speed">Set Speed:</string>
    <string name="invalid_date_range">Invalid Date range.</string>
    <string name="km_p_h">Km/h</string>
    <string name="headet_title_device_list">Device List:</string>
    <string name="headet_title_group_list">Group List</string>
    <string name="user_is_not_active">User is not active.</string>
    <string name="account_name">Account Name:</string>
    <string name="website">Website:</string>
    <string name="cnt_person">Contact Person:</string>
    <string name="skype_acc">Skype Account:</string>
    <string name="account_restriction">Account Restrictions:</string>
    <string name="max_no_device">Max Nr. Devices:</string>
    <string name="max_users">Max Users:</string>
    <string name="admin_user">Admin User</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="account_address">Account Address:</string>
    <string name="zim_postal_code">ZIP / Postal Code:</string>
    <string name="city">City:</string>
    <string name="country">Country:</string>
    <string name="account_units">Account Units:</string>
    <string name="volume_unit">Volume Unit:</string>
    <string name="fuel_efficiency">Fuel Efficiency:</string>
    <string name="pressure_unit">Pressure Unit:</string>
    <string name="temperature_unit">Temperature Unit:</string>
    <string name="account_type">Account Type:</string>
    <string name="company_name">Company Name:</string>
    <string name="user_role">User Role:</string>
    <string name="device_name">Device Name:</string>
    <string name="vehicle_type">Vehicle Type:</string>
    <string name="vehicle_registration">Vehicle Registration:</string>
    <string name="registration_exp_date">Registration Expiration Date:</string>
    <string name="initial_mileage">Initial Mileage:</string>
    <string name="device_type">Device Type:</string>
    <string name="fuel_data">Fuel Data:</string>
    <string name="min_fuel_filling">Minimum Fuel Filling:</string>
    <string name="min_fuel_theft">Minimum Fuel Theft:</string>
    <string name="tank_capacity">Tank Capacity:</string>
    <string name="avg_consumption">Avg. Consumption (mpg):</string>
    <string name="map_icon">Map Icon:</string>
    <string name="device_icon">Device Icon:</string>
    <string name="browse">Browse</string>
    <string name="no_file_selected">No file selected.</string>
    <string name="username_is_mandatory">Username field is mandatory</string>
    <string name="group_name">Group Name:</string>
    <string name="device_list">Device List:</string>
    <string name="please_wait">Please Wait...</string>
    <string name="device_type_id">Device Type ID:</string>
    <string name="select_device">Select Device:</string>
    <string name="devices_to_view">Devices To View</string>
    <string name="geofence_restriction">Geofences restrictions</string>
    <string name="create_geofences">Create geofences</string>
    <string name="tracks_restrictions">Tracks restrictions</string>
    <string name="view_tracks">View tracks</string>
    <string name="commands_restrictions">Commands restrictions</string>
    <string name="send_commands">Send Commands</string>
    <string name="notifiers_restrictions">Notifiers restrictions</string>
    <string name="sos">SOS</string>
    <string name="connection_loss">Connection Loss</string>
    <string name="gps_loss">GPS Loss</string>
    <string name="overspeed">Overspeed</string>
    <string name="mileage">Mileage</string>
    <string name="ideals">Ideals</string>
    <string name="geofence">Geofence</string>
    <string name="io_act_de_act">IO act. / de act.</string>
    <string name="low_power">Low Power</string>
    <string name="power_cut">Power Cut</string>
    <string name="restore_gps">Restore GPS</string>
    <string name="wake_up">Wake Up</string>
    <string name="shake_alarm">Shake Alarm</string>
    <string name="hard_acceleration">Hard Acceleration</string>
    <string name="harsh_break">Harsh Break</string>
    <string name="move">Move</string>
    <string name="reports_restrictions">Reports restrictions</string>
    <string name="trips">Trips</string>
    <string name="geozones">Geozones</string>
    <string name="ignition_detail">Ignition Detail</string>
    <string name="input_detail">Input Detail</string>
    <string name="distance">Distance</string>
    <string name="temperature">Temperature</string>
    <string name="periodic_service">Periodic Service</string>
    <string name="gps_raw_data">GPS raw data</string>
    <string name="enter_phn_no">Enter Phone Number</string>
    <string name="set_output_type">Set Output Type</string>
    <string name="response_via">Respond Via</string>
    <string name="set_output_type_after_expired">Set output type after minutes has expired</string>
    <string name="time_interval">Time Interval (in Min, 0=disable)</string>
    <string name="send_sms">Send SMS</string>
    <string name="min_should_gre_five">Minutes should greater than 5 and maximum 1440.</string>
	<string name="no_active_device">No Active Device</string>
	<string name="to_dt">To:</string>
	<string name="engine_status">Engine Status:</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_speed_limit_dialog">Set Speed Limit</string>
    <string name="title_activity_map_settings">Map Settings</string>
    <string name="title_activity_view_vehicle_details">Vehicle Detail</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_user_admin_details">User Detail</string>
    <string name="title_activity_new_user">Create New User</string>
    <string name="title_choose_directory">Choose Image</string>
    <string name="title_activity_edit_group">Group Details</string>
    <string name="title_activity_new_vehicle">Add Vehicle</string>
    <string name="title_activity_new_group">Add Group</string>
    <string name="title_activity_roles_add">Add Role</string>
    <string name="title_activity_edit_roles">Modify Role</string>
	<string name="map_normal">Standard Map</string>
</resources>