<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        style="@style/speed_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_id" />

    <EditText
        android:id="@+id/etViewGroupID"
        style="@style/view_admin_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/account_input"
        android:editable="false" />

    <TextView
        style="@style/speed_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name" />

    <EditText
        android:id="@+id/etViewGroupName"
        style="@style/view_admin_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/account_input"
        android:lines="1"
        android:singleLine="true" />

    <TextView
        style="@style/speed_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_list" />

    <ListView
        android:id="@+id/deviceList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <!--
         <Button
        android:id="@+id/dialogButtonCancel"
        style="@style/btn_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/cancel" />
    -->

</LinearLayout>